<resources>
    <string name="app_name">TFG</string>
    <string name="accept">Accept</string>
    <string name="cancel">Cancel</string>
    <string name="userName">USERNAME_PLACEHOLDER</string>
    <string name="description">DESCRIPTION_PLACEHOLDER</string>
    <string name="gustos">GUSTOS_PLACEHOLDER</string>
    <string name="register">I don\'t have an account</string>
    <string name="login">Login</string>
    <string name="nombre">Name</string>
    <string name="apellido">Last Name</string>
    <string name="usuario">Username</string>
    <string name="correo">e-Mail</string>
    <string name="password">Password</string>
    <string name="dob">Date Of Birth</string>
    <string name="forgetPw">Forgot Password</string>
    <string name="incorrectUser">Incorrect user name</string>
    <string name="incorrectPass">Incorrect password name</string>
    <string name="incorrectUserPass">Incorrect user name and password</string>
    <string name="landscapeError">The app is not made to be used in landscape mode\nPlease turn your phone vertically</string>
    <string name="userOrMail">Username or e-Mail</string>
</resources>