<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/AppTheme"
    android:background="@drawable/bg_colors"
    tools:context=".Profile">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="404dp"
        android:layout_height="338dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/userName"
        android:layout_width="377dp"
        android:layout_height="55dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="23dp"
        android:text="@string/userName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/description"
        android:layout_width="377dp"
        android:layout_height="125dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="15dp"
        android:text="@string/description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userName" />

    <TextView
        android:id="@+id/gustos"
        android:layout_width="377dp"
        android:layout_height="100dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="15dp"
        android:text="@string/gustos"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/description" />
</android.support.constraint.ConstraintLayout>