<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterWindow"
    android:background="@drawable/bg_colors"
    style="@style/AppTheme">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp"
        android:background="@drawable/bg_colors">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="@style/RegRows">

            <TextView
                style="@style/TextReg"
                android:id="@+id/nameReg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nombre"/>

            <EditText
                android:id="@+id/editTextTextPersonName2"
                style="@style/textInputs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:hint="@string/nombre"/>
        </TableRow>

        <TableRow
            style="@style/RegRows"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                style="@style/TextReg"
                android:id="@+id/LastNReg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/apellido" />

            <EditText
                android:id="@+id/editTextTextPersonName"
                style="@style/textInputs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:hint="@string/apellido"/>
        </TableRow>

        <TableRow
            style="@style/RegRows"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                style="@style/TextReg"
                android:id="@+id/UserReg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/usuario" />

            <EditText
                android:id="@+id/editTextTextPersonName4"
                style="@style/textInputs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:hint="@string/usuario"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="@style/RegRows">
            <TextView
                style="@style/TextReg"
                android:id="@+id/PassReg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password" />

            <EditText
                android:id="@+id/editTextTextPassword"
                style="@style/textInputs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:hint="@string/password"/>

        </TableRow>

        <TableRow
            style="@style/RegRows"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                style="@style/TextReg"
                android:id="@+id/BirthReg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dob" />

            <CalendarView
                android:layout_width="265dp"
                android:layout_height="232dp"></CalendarView>
        </TableRow>
    </TableLayout>

</android.support.constraint.ConstraintLayout>