<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/bg_colors"
    style="@style/AppTheme">

    <TextView
        android:id="@+id/NombreApp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="NombreApp"
        android:textAlignment="center"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.132"
        style="@style/TextLabels"/>


    <TextView
        android:id="@+id/UserText"
        style="@style/TextLabels"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="208dp"
        android:text="@string/usuario"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/PassText"
        style="@style/TextLabels"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="388dp"
        android:text="@string/password"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        style="@style/textInputs"
        android:id="@+id/UserField"
        android:layout_width="212dp"
        android:layout_height="48dp"
        android:layout_marginTop="208dp"
        android:layout_marginEnd="36dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/usuario"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/PassField"
        android:layout_width="213dp"
        android:layout_height="45dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="384dp"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="@string/password"
        style="@style/textInputs"/>

    <TextView
        android:id="@+id/FPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="39dp"
        android:text="Forget Password"
        android:clickable="true"
        android:onClick="forgotPass"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PassField"
        app:layout_constraintVertical_bias="0.0"
        style="@style/BtnTextLabels"/>

    <Button
        android:id="@+id/Login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="152dp"
        android:layout_marginBottom="192dp"
        android:text="LogIn"
        android:background="@drawable/loginbutton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:onClick="loginProcess"/>

    <TextView
        android:id="@+id/RegisterText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="444dp"
        android:clickable="true"
        android:gravity="center"
        android:minHeight="48dp"
        android:onClick="openRegister"
        android:text="@string/register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.459"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/BtnTextLabels"/>

</android.support.constraint.ConstraintLayout>